# course-viz-python

./: README.md  app.py  graphs-Dec5th.ipynb  pyproject.toml
apps/dashboard-tips/: app.py
apps/template_app/: app.py
cool-app/: app.py
cool-app-1/: constants.py
cool-app-1/www/: pyvis.html
cool-app/assets/: links.csv
cool-app/www/: pyvis.html
graphs/: graphs-finished.ipynb  graphs.ipynb
